# [package]
# name = "rust_ws"
# version = "0.1.0"
# edition = "2021"
#
# [dependencies]
# anyhow = { version = "1.0.95", features = ["backtrace"] }
# rclrs = "0.4.1"
# rosidl_runtime_rs = "0.4.1"
# tokio = { version = "1.42.0", features = ["full"] }
#
# ## msgs
# sensor_msgs = "*"
# std_msgs = "*"
# ackermann_msgs = "*" 

[package]
name = "rust_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
rclrs = "0.4.1"
tokio = { version = "1.45.1", features = ["full"] }
ackermann_msgs = "*"
sensor_msgs = "4.2.3"
std_msgs = "4.2.3"
visualization_msgs = "4.2.3"
anyhow = "1.0"
ctrlc = "3.4"
